[gd_scene load_steps=5 format=3 uid="uid://ejh5k8pj06qs"]

[ext_resource type="Script" path="res://component.gd" id="1_7xbsi"]
[ext_resource type="Texture2D" uid="uid://cc3rtuds6kj1s" path="res://icon.svg" id="2_17f6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25jmu"]

[sub_resource type="LabelSettings" id="LabelSettings_utoul"]
font_color = Color(1, 0, 0, 1)

[node name="component" type="Node2D"]
script = ExtResource("1_7xbsi")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_17f6e")

[node name="Area2D" type="Area2D" parent="Sprite2D"]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_25jmu")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_utoul")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
